--- a/TODO
+++ b/TODO
@@ -7,3 +7,25 @@ state, unless using global call, although this seems bad style.
 that must be accessible to both of 
 	handle_message
 	handle_midi
+
+
+NO PRIORITY
+setting up vi plugins not neccesary for now - don't sidetrack
+	- although, the problem that has arisen is related to the build of vim,
+	syntastic requires that the python version in vim matches the path pointed to,
+	so the virtual-env is upsetting the versioning
+
+	so to switch the setup, it depends on the environment (with or without the venv)
+	the variables
+
+
+						vim-python					vim-python3
+pydoc_exec=				/usr/bin/pydoc				/usr/bin/pydoc3
+syntastic_python_exec=	/usr/bin/python				/usr/bin/python3
+		
+1)vim-virtualenv should be determining the environment, but can we change 
+the version of vim that is running 
+2) vim-virtualenv cannot add the virtualenv python path that is at odds with 
+the python build in vim
+
+#We will not worry about completion
